--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Atividades JS<h1>
         <ul>
             <li><a href="/projetoJs/semana1/semana1.html">Semana 1</a></li>
-            <li><a href="semana2.html">Semana 2</a></li>                
+            <li><a href="/projetoJS/semana2/semana2.html">Semana 2</a></li>                
         </ul>
 </body>
 
