--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="/projetoJs/semana1/semana1.html">Semana 1</a></li>
             <li><a href="/projetoJs/semana2/semana2.html">Semana 2</a></li> 
             <li><a href="/projetoJs/semana3/semana3.html">Semana 3</a></li>
+            <li><a href="/projetoJs/semana4/formulario_professor_aluno.html">Semana 4</a></li>
         </ul>
 </body>
 
