--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="/projetoJs/semana3/semana3.html">Semana 3</a></li>
             <li><a href="/projetoJs/semana4/formulario.html">Semana 4</a></li>
             <li><a href="/projetoJs/semana5/contador_pessoas.html">Semana 5</a></li>
+            <li><a href="/projetoJs/semana6/calculadora.html">Semana 6</a></li>
         </ul>
 </body>
 
