--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt">
 <head>
-    <meta charset="utf-8">
-    <title>Exemplo JavaScript</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apresentação das Atividades JS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: white;
+            color: black;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            background: linear-gradient(to right, #00c6ff, #0072ff);
+            color: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            font-size: 2.5em;
+            font-weight: 600;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 30px 0;
+        }
+        a {
+            text-decoration: none;
+            font-size: 1.2em;
+            font-weight: 400;
+            color: white;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            border-radius: 10px;
+            transition: 0.3s;
+        }
+        a:hover {
+            background: rgba(255, 255, 255, 0.4);
+        }
+    </style>
 </head>
-
 <body>
-    <h1>Atividades JS<h1>
+    <div class="container">
+        <h1>Atividades JavaScript</h1>
         <ul>
             <li><a href="/projetoJs/semana1/semana1.html">Semana 1</a></li>
-            <li><a href="/projetoJs/semana2/semana2.html">Semana 2</a></li> 
-            <li><a href="/projetoJs/semana3/semana3.html">Semana 3</a></li>
-            <li><a href="/projetoJs/semana4/formulario.html">Semana 4</a></li>
-            <li><a href="/projetoJs/semana5/contador_pessoas.html">Semana 5</a></li>
-            <li><a href="/projetoJs/semana6/calculadora.html">Semana 6</a></li>
+            <li><a href="/projetoJs/semana2/semana2.html">Semana 2</a></li>
+            <li><a href="/projetoJs/semana3/semana3.html">Semana 3</a></li>  
+            <li><a href="/projetoJs/semana4/formulario.html">Semana 4</a></li> 
+            <li><a href="/projetoJs/semana5/contador_pessoas.html">Semana 5</a></li> 
+            <li><a href="/projetoJs/semana6/calculadora.html">Semana 6</a></li> 
+            <li><a href="/projetoJs/semana7/letreiro.html">Semana 7</a></li>         
         </ul>
+    </div>
 </body>
-
 </html>
